# QT

./: README.md  quick_setup.sh
.github/workflows/: main.yml
QT_APP/: .gitignore  CMakeLists.txt  Main.qml  action.cpp  action.h  main.cpp  timer.cpp  timer.h  usb.cpp  usb.h
web-server/: package.json  server.js
